# drugraph

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in
lib/: Makefile.in
main/: Makefile.am  Makefile.in  main_drugraph.c
src/: Makefile.in  bipartite.c  modules.c  modules.h
test/: Makefile.in
